--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-LOCALHOST="http://localhost:3000"
-VERCEL_URL="https://next-val-quiz-6uektsgeh-leo26dandy.vercel.app/"
+LOCALHOST="http://localhost:3000",
+VERCEL_URL="https://next-val-quiz-6uektsgeh-leo26dandy.vercel.app/",
