--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # NEXT_PUBLIC_LOCALHOST="http://localhost:3000"
-API_ENDPOINT="https://next-val-quiz.vercel.app/api/"
+API_ENDPOINT=https://next-val-quiz.vercel.app/api/
